# vocex

./: .gitignore  CNAME  README.md  augmentations.py  create_ckpt.py  index.html  pyproject.toml  requirements.txt  save_to_cpu.py  setup.py  train.py  train_from_scratch.py  train_vocex2.py
.ipynb_checkpoints/: test-checkpoint.ipynb
demo/: index.html  st_demo.py
examples/: test.ipynb
test/: __init__.py  check_train_valid_spk.py  test.py  wada_snr.py
training/: arguments.py  collator.py  config.yaml  dataset.py
training/data/: phone2idx.json  speaker2idx.json
training/measures/: __init__.py
util_scripts/: create_onnx.py
vocex/: __init__.py  conformer_layer.py  conformer_model.py  image_helpers.py  onnx_stft.py  pooling.py  scaler.py  softdtw.py  speaker_loss.py  tpu_metrics_delta.py  transformer.py  utils.py
