
[project]
name = "vocex"
version = "0.1.2"
description = "Voice Frame-Level and Utterance-Level Attribute Extraction"
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = []
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
